--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server-deployment-practice1",
+  "name": "cicddemo2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.1.4",
+    "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "jest": "^29.5.0",
     "supertest": "^6.3.3"
